--- a/PySwiftyRegex.xcodeproj/xcshareddata/xcschemes/PySwiftyRegex-WatchOS.xcscheme
+++ b/PySwiftyRegex.xcodeproj/xcshareddata/xcschemes/PySwiftyRegex-WatchOS.xcscheme
@@ -15,7 +15,7 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "795AFF9F1BB556F30055D858"
-               BuildableName = "PySwiftyRegex-WatchOS.framework"
+               BuildableName = "PySwiftyRegex.framework"
                BlueprintName = "PySwiftyRegex-WatchOS"
                ReferencedContainer = "container:PySwiftyRegex.xcodeproj">
             </BuildableReference>
@@ -46,7 +46,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "795AFF9F1BB556F30055D858"
-            BuildableName = "PySwiftyRegex-WatchOS.framework"
+            BuildableName = "PySwiftyRegex.framework"
             BlueprintName = "PySwiftyRegex-WatchOS"
             ReferencedContainer = "container:PySwiftyRegex.xcodeproj">
          </BuildableReference>
@@ -64,7 +64,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "795AFF9F1BB556F30055D858"
-            BuildableName = "PySwiftyRegex-WatchOS.framework"
+            BuildableName = "PySwiftyRegex.framework"
             BlueprintName = "PySwiftyRegex-WatchOS"
             ReferencedContainer = "container:PySwiftyRegex.xcodeproj">
          </BuildableReference>
