--- a/PySwiftyRegex.xcodeproj/xcshareddata/xcschemes/PySwiftyRegex-tvOS.xcscheme
+++ b/PySwiftyRegex.xcodeproj/xcshareddata/xcschemes/PySwiftyRegex-tvOS.xcscheme
@@ -15,7 +15,7 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "793050BD1BD8AC610040127B"
-               BuildableName = "PySwiftyRegex-tvOS.framework"
+               BuildableName = "PySwiftyRegex.framework"
                BlueprintName = "PySwiftyRegex-tvOS"
                ReferencedContainer = "container:PySwiftyRegex.xcodeproj">
             </BuildableReference>
@@ -43,7 +43,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "793050BD1BD8AC610040127B"
-            BuildableName = "PySwiftyRegex-tvOS.framework"
+            BuildableName = "PySwiftyRegex.framework"
             BlueprintName = "PySwiftyRegex-tvOS"
             ReferencedContainer = "container:PySwiftyRegex.xcodeproj">
          </BuildableReference>
@@ -65,7 +65,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "793050BD1BD8AC610040127B"
-            BuildableName = "PySwiftyRegex-tvOS.framework"
+            BuildableName = "PySwiftyRegex.framework"
             BlueprintName = "PySwiftyRegex-tvOS"
             ReferencedContainer = "container:PySwiftyRegex.xcodeproj">
          </BuildableReference>
@@ -83,7 +83,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "793050BD1BD8AC610040127B"
-            BuildableName = "PySwiftyRegex-tvOS.framework"
+            BuildableName = "PySwiftyRegex.framework"
             BlueprintName = "PySwiftyRegex-tvOS"
             ReferencedContainer = "container:PySwiftyRegex.xcodeproj">
          </BuildableReference>
