do not build tests for running

--- a/PySwiftyRegex.xcodeproj/xcshareddata/xcschemes/PySwiftyRegex-OSX.xcscheme
+++ b/PySwiftyRegex.xcodeproj/xcshareddata/xcschemes/PySwiftyRegex-OSX.xcscheme
@@ -22,10 +22,10 @@
          </BuildActionEntry>
          <BuildActionEntry
             buildForTesting = "YES"
-            buildForRunning = "YES"
+            buildForRunning = "NO"
             buildForProfiling = "NO"
             buildForArchiving = "NO"
-            buildForAnalyzing = "YES">
+            buildForAnalyzing = "NO">
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "0CEBDD2C1B39B8C4003A40BB"
