--- a/PySwiftyRegex.xcodeproj/xcshareddata/xcschemes/PySwiftyRegex-iOS.xcscheme
+++ b/PySwiftyRegex.xcodeproj/xcshareddata/xcschemes/PySwiftyRegex-iOS.xcscheme
@@ -22,10 +22,10 @@
          </BuildActionEntry>
          <BuildActionEntry
             buildForTesting = "YES"
-            buildForRunning = "YES"
+            buildForRunning = "NO"
             buildForProfiling = "NO"
             buildForArchiving = "NO"
-            buildForAnalyzing = "YES">
+            buildForAnalyzing = "NO">
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "0CEBDCE71B39B2FC003A40BB"
