--- a/PySwiftyRegex/Info.plist
+++ b/PySwiftyRegex/Info.plist
@@ -21,7 +21,7 @@
 	<key>CFBundleVersion</key>
 	<string>$(CURRENT_PROJECT_VERSION)</string>
 	<key>NSHumanReadableCopyright</key>
-	<string>Copyright © 2015 Ce Zheng. All rights reserved.</string>
+	<string>Copyright © 2015ー2016 Ce Zheng. All rights reserved.</string>
 	<key>NSPrincipalClass</key>
 	<string></string>
 </dict>
