--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 language: objective-c
 
 os: osx
-osx_image: xcode7.2
+osx_image: xcode8
 
 env:
   global:
@@ -11,11 +11,11 @@ env:
     - TVOS_SCHEME="PySwiftyRegex-tvOS"
     - WATCHOS_SCHEME="PySwiftyRegex-WatchOS"
   matrix:
-    - DESTINATION="platform=OS X,arch=x86_64" SCHEME="$OSX_SCHEME" ACTION="test"
-    - DESTINATION="platform=iOS Simulator,name=iPhone 6s" SCHEME="$IOS_SCHEME" EXTRA="-sdk iphonesimulator" ACTION="test"
-    - DESTINATION="platform=tvOS Simulator,name=Apple TV 1080p" SCHEME="$TVOS_SCHEME" ACTION="test"
-    - DESTINATION="name=Apple Watch - 38mm" SCHEME="$WATCHOS_SCHEME" ACTION="build"
+    - DESTINATION="platform=OS X,arch=x86_64" SCHEME="$OSX_SCHEME" SDK="macosx" ACTION="test"
+    - DESTINATION="platform=iOS Simulator,name=iPhone 6s" SCHEME="$IOS_SCHEME" SDK="iphonesimulator" ACTION="test"
+    - DESTINATION="platform=tvOS Simulator,name=Apple TV 1080p" SCHEME="$TVOS_SCHEME" SDK="appletvsimulator" ACTION="test"
+    - DESTINATION="name=Apple Watch - 38mm" SCHEME="$WATCHOS_SCHEME" SDK="watchsimulator" ACTION="build"
 
 script: 
   - xcode-select -p
-  - xctool -project "$XCODEPROJ" -scheme "$SCHEME" -destination "$DESTINATION" $EXTRA $ACTION
+  - xctool -project "$XCODEPROJ" -scheme "$SCHEME" -destination "$DESTINATION" -sdk $SDK $ACTION
