--- a/.travis.yml
+++ b/.travis.yml
@@ -18,4 +18,4 @@ env:
 
 script: 
   - xcode-select -p
-  - xctool -project "$XCODEPROJ" -scheme "$SCHEME" -destination "$DESTINATION" -sdk $SDK $ACTION
+  - xcodebuild -project "$XCODEPROJ" -scheme "$SCHEME" -destination "$DESTINATION" -sdk $SDK $ACTION
