--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 language: objective-c
 
 os: osx
-osx_image: xcode9
+osx_image: xcode10.3
 
 env:
   global:
@@ -9,9 +9,9 @@ env:
     - SCHEME="PySwiftyRegex"
   matrix:
     - DESTINATION="platform=OS X,arch=x86_64" SDK="macosx" ACTION="test"
-    - DESTINATION="platform=iOS Simulator,name=iPhone 6s" SDK="iphonesimulator" ACTION="test"
-    - DESTINATION="platform=tvOS Simulator,name=Apple TV 1080p" SDK="appletvsimulator" ACTION="test"
-    - DESTINATION="name=Apple Watch - 38mm" SDK="watchsimulator" ACTION="build"
+    - DESTINATION="platform=iOS Simulator,name=iPhone X" SDK="iphonesimulator" ACTION="test"
+    - DESTINATION="platform=tvOS Simulator,name=Apple TV 4K" SDK="appletvsimulator" ACTION="test"
+    - DESTINATION="name=Apple Watch Series 4 - 40mm" SDK="watchsimulator" ACTION="build"
 
 script: 
   - xcode-select -p
